kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: AnsimSpring-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: nginx
spec:
  rules:
    - host: www.ansimspring.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: apache-service
                port:
                  number: 80
